Input field changed to number

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="number">?</div>
             <div class="lower">
                 <div class="right">
-                    <input type="text" class="ip-number">
+                    <input type="number" class="ip-number" >
                     <button class="check">Check!</button>
                 </div>
                 <div class="left">
